<resources>
    <string name="app_name">Matrimony_Project</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="login_button">LogIn</string>
    <string name="register_button">Register</string>
    <string name="btnloginHint">Username</string>
    <string name="btnpassHint">Password</string>
    <string name="edtUsername">Username</string>
    <string name="edtPassword">Password</string>
    <string name="btnSignin">Sign In</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="registerName">Name</string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="registerCpassword">Confirm Password</string>
    <string name="registerAge">Age</string>
    <string name="registerBirthPlace">Birth Place</string>
    <string name="registerBirthtime">Birth Time</string>
    <string name="registerPhno">Phone no</string>
    <string name="registerDOB">Date of Birth</string>
    <string name="registerGender">Gender</string>
    <string name="registerWeight">Weight</string>
    <string name="registerHeight">Height</string>
    <string name="registerComplextion">Complextion</string>
    <string name="registerHasSpectacleLens">Has Spectacle Lens</string>
    <string name="registerMarital">Marital Status</string>
    <string name="registerBtnNext">Next</string>
    <string name="registerBtnDone">Done</string>

    <string name="profileId">Profile ID</string>
    <string name="edulevel">Education Level</string>
    <string name="eduDescrip">Education Description</string>
    <string name="Mothername">Mother\'s Name</string>
    <string name="motheroccupation">Mother\'s Occupation</string>
    <string name="fathername">Father\'s Name</string>
    <string name="Fatherlivingstatus">Father Living Status</string>
    <string name="Maternaluncles">Maternal Uncles</string>
    <string name="Relatives">Relatives</string>
    <string name="FamilyWealth">Family Wealth</string>

    <string name="intercasteinfamily">InterCaste In Family</string>
    <string name="intercastereligion">InterCaste Religion Caste</string>
    <string name="SiblingGender">Education Description</string>
    <string name="martialstatus">Marital Status</string>
    <string name="isElder">Is Elder</string>
    <string name="ExpectedCityCountry">Expected City Country</string>
    <string name="Income">Income</string>
    <string name="Qualificationa">Qualification</string>
    <string name="Occupation">Occupation</string>
    <string name="Divorcee">Divorcee</string>
    <string name="Minheight">Min Height</string>
    <string name="Maxagedifference">Max Age Difference</string>
    <string name="Caste">Caste</string>
    <string name="NativePlace">Native Place</string>
    <string name="PermanantLocation">Permanant Location</string>
    <string name="Currentlocation">Current Location</string>
    <string name="SubCaste">SubCaste</string>
    <string name="Rashi">Rashi</string>
    <string name="Nadi">Nadi</string>
    <string name="hasMangal">Has Mangal</string>
    <string name="Charan">Charan</string>
    <string name="Gotra">Gotra</string>
    <string name="Devak">Devak</string>
    <string name="AnnualIncome">Annual Income</string>
    <string name="OccupationDesc">Occupation Description</string>
    <string name="radioMale">Male</string>
    <string name="radiofemale">Female</string>
    <string name="livingStatus">Mother\'s Living Status</string>
    <string name="fatheroccupation">Father\'s Occupation</string>
    <string name="GenderSibling">Sibling\'s Gender</string>
    <string name="maritalstatus">Marital Status</string>
    <string name="educationlevel">Education Level</string>
    <string name="Achievments">Achievements</string>
    <string name="Siblings">Siblings</string>

    <string name="DobDay">Day</string>
    <string name="DobMonth">Month</string>
    <string name="DobYear">Year</string>
    <string name="occupation">Occupation</string>
    <string name="Siblinggender">Siblings\'s Gender</string>



    <string name="Registration_button">Registration</string>

    <string name="Personal_Details">Personal Details</string>
    <string name="Qualification">Qualification:</string>
    <string name="Horoscope">Horoscope:</string>
    <string name="Family_Background">Family Background:</string>
    <string name="Expectations">Expectations:</string>

    <string name="Candidate_Id">Profile Id:</string>
    <string name="Candidates_Name">Name:</string>
    <string name="Candidates_Sex">Sex:</string>
    <string name="Candidates_DOB">Date of Birth:</string>
    <string name="Candidates_Height">Height:</string>
    <string name="Candidates_Weight">Weight:</string>
    <string name="Candidates_Lens">Spectacles:</string>
    <string name="Candidates_Complexion">Complexion:</string>
    <string name="Candidates_MaritalStatus">Marital Status:</string>
    <string name="Candidates_BloodGrp">Blood Group:</string>
    <string name="Candidates_BirthPlace">Birth PLace:</string>
    <string name="Candidates_BirthTime">Birth Time:</string>
    <string name="Candidates_CurrentLocation">Current Location:</string>
    <string name="Candidates_PermanentAddress">Permanent Address:</string>
    <string name="Candidates_NativePLace">Native Place:</string>

    <string name="Candidates_Education">Education:</string>
    <string name="Candidates_Education_Description">Description:</string>

    <string name="Candidates_Annual_Income">Annual Income:</string>

    <string name="Candidates_Caste">Caste:</string>
    <string name="Candidates_SubCaste">Sub-caste:</string>
    <string name="Candidates_Rashi">Rashi:</string>
    <string name="Candidates_Nadi">Nadi:</string>
    <string name="Candidates_Mangal">Mangal:</string>
    <string name="Candidates_Charan">Charan:</string>
    <string name="Candidates_Gotra">Gotra:</string>
    <string name="Candidates_Devak">Devak:</string>

    <string name="Candidates_Fathers_Name">Father\'\s Name:</string>
    <string name="Candidates_Fathers_Living_Status">Father\'\s Living Status:</string>
    <string name="Candidates_Fathers_Occupation">Father\'\s Occupation:</string>
    <string name="Candidates_Mothers_Name">Mother\'\s Name:</string>
    <string name="Candidates_Mothers_Living_Status">Mother\'\s Living Status:</string>
    <string name="Candidates_Mothers_Occupation">Mother\'\s Occupation:</string>
    <string name="Candidates_Mamas_Name">Mama\'\s Name:</string>
    <string name="Candidates_Brothers_Name">Brother\'\s Name:</string>
    <string name="Candidates_Sisters_Name">Sister\'\s Name:</string>
    <string name="Candidates_Relatives">Relatives:</string>
    <string name="Candidates_Family_Wealth">Family wealth:</string>
    <string name="Candidates_InterCaste_In_Family">InterCaste in Family:</string>
    <string name="Candidates_InterCaste_Religion_Caste">InterCaste Religion Caste:</string>


    <string name="Age_Difference">Age Difference:</string>
    <string name="Expected_Caste">Caste:</string>
    <string name="Expected_Height">Height:</string>
    <string name="Expected_Divorce_Status">Divorce Status:</string>
    <string name="Expected_Qualification">Qualificaion:</string>
    <string name="Expected_City_Country">City/Country:</string>
    <string name="Expected_Occupation">Occupation:</string>
    <string name="Expected_Income">Income:</string>

    <dimen name="Large_Size">24dp</dimen>
    <dimen name="Small_Size">15dp</dimen>
    <color name="Red_color">#f00</color>
    <string name="title_activity_main">MainActivity</string>



</resources>
