<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    app:cardCornerRadius="5sp"
    app:cardElevation="5sp"
    android:background="#FFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textColor="#000"

            android:text="Sibling Info"
            android:textSize="30dp" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/Siblings"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:hint="@string/Siblinggender"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <RadioButton
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/radioMale"/>

            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiofemale"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:hint="@string/maritalstatus"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1">

                </Spinner>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:hint="@string/isElder"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1">

                </Spinner>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerBtnNext"
            android:layout_gravity="end"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btnnxt5"/>
        1
    </LinearLayout>

</android.support.v7.widget.CardView>